--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,41 +38,45 @@ img, video { height: auto; max-width: 100%; }
 
 * { --tw-border-opacity:1; border-color: rgba(229, 231, 235, var(--tw-border-opacity)); }
 
-@font-face { font-display: block; font-family: Neue Haas Grotesk; font-style: normal; font-weight: 400; src: url(../fonts/NeueHaasGrotestText/NeueHaasGroteskText-Regular.woff) format("woff"); unicode-range: U+0000-dfff,U+f900-fffd; }
+@font-face { font-display: block; font-display: swap; font-family: Neue Haas Grotesk; font-style: normal; font-weight: 400; src: url(../fonts/NeueHaasGrotestText/NeueHaasGroteskText-Regular.woff) format("woff"); unicode-range: U+0000-dfff,U+f900-fffd; }
 
-@font-face { font-display: block; font-family: Neue Haas Grotesk; font-style: italic; font-weight: 400; src: url(../fonts/NeueHaasGrotestText/NeueHaasGroteskText-Italic.woff) format("woff"); unicode-range: U+0000-dfff,U+f900-fffd; }
+@font-face { font-display: block; font-display: swap; font-family: Neue Haas Grotesk; font-style: italic; font-weight: 400; src: url(../fonts/NeueHaasGrotestText/NeueHaasGroteskText-Italic.woff) format("woff"); unicode-range: U+0000-dfff,U+f900-fffd; }
 
-@font-face { font-display: block; font-family: Neue Haas Grotesk; font-style: normal; font-weight: 500; src: url(../fonts/NeueHaasGrotestText/NeueHaasGroteskText-Medium.woff) format("woff"); unicode-range: U+0000-dfff,U+f900-fffd; }
+@font-face { font-display: block; font-display: swap; font-family: Neue Haas Grotesk; font-style: normal; font-weight: 500; src: url(../fonts/NeueHaasGrotestText/NeueHaasGroteskText-Medium.woff) format("woff"); unicode-range: U+0000-dfff,U+f900-fffd; }
 
-@font-face { font-display: block; font-family: Neue Haas Grotesk; font-style: italic; font-weight: 500; src: url(../fonts/NeueHaasGrotestText/NeueHaasGroteskText-MediumItalic.woff) format("woff"); unicode-range: U+0000-dfff,U+f900-fffd; }
+@font-face { font-display: block; font-display: swap; font-family: Neue Haas Grotesk; font-style: italic; font-weight: 500; src: url(../fonts/NeueHaasGrotestText/NeueHaasGroteskText-MediumItalic.woff) format("woff"); unicode-range: U+0000-dfff,U+f900-fffd; }
 
-@font-face { font-display: block; font-family: Neue Haas Grotesk; font-style: normal; font-weight: 700; src: url(../fonts/NeueHaasGrotestText/NeueHaasGroteskText-Bold.woff) format("woff"); unicode-range: U+0000-dfff,U+f900-fffd; }
+@font-face { font-display: block; font-display: swap; font-family: Neue Haas Grotesk; font-style: normal; font-weight: 700; src: url(../fonts/NeueHaasGrotestText/NeueHaasGroteskText-Bold.woff) format("woff"); unicode-range: U+0000-dfff,U+f900-fffd; }
 
-@font-face { font-display: block; font-family: Neue Haas Grotesk; font-style: italic; font-weight: 700; src: url(../fonts/NeueHaasGrotestText/NeueHaasGroteskText-BoldItalic.woff) format("woff"); unicode-range: U+0000-dfff,U+f900-fffd; }
+@font-face { font-display: block; font-display: swap; font-family: Neue Haas Grotesk; font-style: italic; font-weight: 700; src: url(../fonts/NeueHaasGrotestText/NeueHaasGroteskText-BoldItalic.woff) format("woff"); unicode-range: U+0000-dfff,U+f900-fffd; }
 
-@font-face { font-family: Icons; src: url(../fonts/IconFont-Regular-0.9.3.woff2); unicode-range: U+e000-e15c,U+f0000,U+fe0e; }
+@font-face { font-display: swap; font-family: Icons; src: url(../fonts/IconFont-Regular-0.9.3.woff2); unicode-range: U+e000-e15c,U+f0000,U+fe0e; }
 
-@font-face { font-family: Icons; font-weight: 240; src: url(../fonts/IconFont-Regular-0.9.3.woff2); unicode-range: U+e000-e15c,U+f0000,U+fe0e; }
+@font-face { font-display: swap; font-family: Icons; font-weight: 240; src: url(../fonts/IconFont-Regular-0.9.3.woff2); unicode-range: U+e000-e15c,U+f0000,U+fe0e; }
 
-@font-face { font-family: Icons; font-weight: 400; src: url(../fonts/IconFont-Regular-0.9.3.woff2); unicode-range: U+e000-e15c,U+f0000,U+fe0e; }
+@font-face { font-display: swap; font-family: Icons; font-weight: 400; src: url(../fonts/IconFont-Regular-0.9.3.woff2); unicode-range: U+e000-e15c,U+f0000,U+fe0e; }
 
-@font-face { font-family: Icons; font-weight: 600; src: url(../fonts/IconFont-Regular-0.9.3.woff2); unicode-range: U+e000-e15c,U+f0000,U+fe0e; }
+@font-face { font-display: swap; font-family: Icons; font-weight: 600; src: url(../fonts/IconFont-Regular-0.9.3.woff2); unicode-range: U+e000-e15c,U+f0000,U+fe0e; }
 
-@font-face { font-family: Icons; font-weight: 800; src: url(../fonts/IconFont-Regular-0.9.3.woff2); unicode-range: U+e000-e15c,U+f0000,U+fe0e; }
+@font-face { font-display: swap; font-family: Icons; font-weight: 800; src: url(../fonts/IconFont-Regular-0.9.3.woff2); unicode-range: U+e000-e15c,U+f0000,U+fe0e; }
 
-@font-face { font-family: Icons; font-style: italic; src: url(../fonts/IconFont-Regular-0.9.3.woff2); unicode-range: U+e000-e15c,U+f0000,U+fe0e; }
+@font-face { font-display: swap; font-family: Icons; font-style: italic; src: url(../fonts/IconFont-Regular-0.9.3.woff2); unicode-range: U+e000-e15c,U+f0000,U+fe0e; }
 
-@font-face { font-family: Icons; font-style: italic; font-weight: 200; src: url(../fonts/IconFont-Regular-0.9.3.woff2); unicode-range: U+e000-e15c,U+f0000,U+fe0e; }
+@font-face { font-display: swap; font-family: Icons; font-style: italic; font-weight: 200; src: url(../fonts/IconFont-Regular-0.9.3.woff2); unicode-range: U+e000-e15c,U+f0000,U+fe0e; }
 
-@font-face { font-family: Icons; font-style: italic; font-weight: 400; src: url(../fonts/IconFont-Regular-0.9.3.woff2); unicode-range: U+e000-e15c,U+f0000,U+fe0e; }
+@font-face { font-display: swap; font-family: Icons; font-style: italic; font-weight: 400; src: url(../fonts/IconFont-Regular-0.9.3.woff2); unicode-range: U+e000-e15c,U+f0000,U+fe0e; }
 
-@font-face { font-family: Icons; font-style: italic; font-weight: 600; src: url(../fonts/IconFont-Regular-0.9.3.woff2); unicode-range: U+e000-e15c,U+f0000,U+fe0e; }
+@font-face { font-display: swap; font-family: Icons; font-style: italic; font-weight: 600; src: url(../fonts/IconFont-Regular-0.9.3.woff2); unicode-range: U+e000-e15c,U+f0000,U+fe0e; }
 
-@font-face { font-family: Icons; font-style: italic; font-weight: 800; src: url(../fonts/IconFont-Regular-0.9.3.woff2); unicode-range: U+e000-e15c,U+f0000,U+fe0e; }
+@font-face { font-display: swap; font-family: Icons; font-style: italic; font-weight: 800; src: url(../fonts/IconFont-Regular-0.9.3.woff2); unicode-range: U+e000-e15c,U+f0000,U+fe0e; }
 
-body { background: #fff; font-family: Neue Haas Grotesk,Icons; }
+body { background: #fff; font-family: Neue Haas Grotesk,Icons,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol; }
 
 h1 { font-size: 1.125rem; line-height: 1.75rem; }
+
+.skip-link { background: #000; color: #fff; left: 0; padding: 8px; position: absolute; top: -40px; z-index: 100; }
+
+.skip-link:focus { top: 0; }
 
 ::-webkit-scrollbar { height: 6px !important; width: 6px !important; }
 
@@ -99,6 +103,8 @@ h1 { font-size: 1.125rem; line-height: 1.75rem; }
 .absolute { position: absolute; }
 
 .relative { position: relative; }
+
+.sticky { position: sticky; }
 
 .top-0 { top: 0; }
 
@@ -135,6 +141,8 @@ h1 { font-size: 1.125rem; line-height: 1.75rem; }
 .h-40 { height: 10rem; }
 
 .h-64 { height: 16rem; }
+
+.h-full { height: 100%; }
 
 .h-screen { height: 100vh; }
 
@@ -275,6 +283,8 @@ h1 { font-size: 1.125rem; line-height: 1.75rem; }
 
 .overscroll-auto { -ms-scroll-chaining: chained; overscroll-behavior: auto; }
 
+.overscroll-none { -ms-scroll-chaining: none; overscroll-behavior: none; }
+
 .overflow-ellipsis { text-overflow: ellipsis; }
 
 .break-all { word-break: break-all; }
@@ -325,6 +335,8 @@ h1 { font-size: 1.125rem; line-height: 1.75rem; }
 
 .bg-white { --tw-bg-opacity:1; background-color: rgba(255, 255, 255, var(--tw-bg-opacity)); }
 
+.bg-blue-100 { --tw-bg-opacity:1; background-color: rgba(219, 234, 254, var(--tw-bg-opacity)); }
+
 .hover\:bg-gray-200:hover { --tw-bg-opacity:1; background-color: rgba(229, 231, 235, var(--tw-bg-opacity)); }
 
 .hover\:bg-blue-100:hover { --tw-bg-opacity:1; background-color: rgba(219, 234, 254, var(--tw-bg-opacity)); }
@@ -358,8 +370,6 @@ h1 { font-size: 1.125rem; line-height: 1.75rem; }
 .pt-6 { padding-top: 1.5rem; }
 
 .pt-7 { padding-top: 1.75rem; }
-
-.pr-3 { padding-right: .75rem; }
 
 .pb-1 { padding-bottom: .25rem; }
 
@@ -402,8 +412,6 @@ h1 { font-size: 1.125rem; line-height: 1.75rem; }
 .text-2xl { font-size: 1.5rem; line-height: 2rem; }
 
 .text-3xl { font-size: 1.875rem; line-height: 2.25rem; }
-
-.text-5xl { font-size: 3rem; line-height: 1; }
 
 .text-6xl { font-size: 3.75rem; line-height: 1; }
 
