--- a/projects/template/index.html
+++ b/projects/template/index.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
+    <meta name="viewport" content='width=device-width, initial-scale=1.0, maximum-scale=5.0' />
+
     <!-- <title>Very very very very very very very very very long Title - imartinezl</title> -->
     <title>imartinezl - Very very very very very very very very very long Title</title>
     <meta name="description"
-    content="Header">
-    
+        content="Header">
+
     
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico" />
     
-    
-    <link rel="canonical" href=" { { site.url } }{ { page.url } }" />
+
+    <link rel="canonical" href="https://inigo.tech/projects/template/index.html" />
     <link rel="stylesheet" href="/assets/css/main.css">
     <script defer src="/assets/js/alpine.min.js"></script>
 
@@ -31,7 +32,7 @@
 </script>
     
 
-    <link type="application/atom+xml" rel="alternate" href="/feed.xml" title="imartinezl" />
+    <link type="application/atom+xml" rel="alternate" href="https://inigo.tech/feed.xml" title="imartinezl" />
     <!-- Begin Jekyll SEO tag v2.7.1 -->
 <title>Very very very very very very very very very long Title | imartinezl</title>
 <meta name="generator" content="Jekyll v4.2.0" />
@@ -39,23 +40,26 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque consequat, lectus luctus suscipit sagittis, lacus risus egestas massa, quis facilisis orci nisl non enim. Pellentesque in enim nisi. Cras suscipit nulla at accumsan sollicitudin. Morbi blandit ex at tincidunt tincidunt. Duis in condimentum massa, et commodo enim. Etiam eget maximus nisl, ac sollicitudin purus. Aenean tristique ornare dui, ut lobortis eros ullamcorper ut. Aliquam vitae sagittis sem. Ut elementum aliquet nulla et elementum. Curabitur mattis, dui vitae eleifend auctor, erat arcu auctor diam, in malesuada magna ipsum non tortor. Donec a tortor elit. Curabitur ornare luctus varius. Etiam hendrerit est in magna euismod, ut tincidunt lorem facilisis. Proin efficitur efficitur velit vel elementum." />
 <meta property="og:description" content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque consequat, lectus luctus suscipit sagittis, lacus risus egestas massa, quis facilisis orci nisl non enim. Pellentesque in enim nisi. Cras suscipit nulla at accumsan sollicitudin. Morbi blandit ex at tincidunt tincidunt. Duis in condimentum massa, et commodo enim. Etiam eget maximus nisl, ac sollicitudin purus. Aenean tristique ornare dui, ut lobortis eros ullamcorper ut. Aliquam vitae sagittis sem. Ut elementum aliquet nulla et elementum. Curabitur mattis, dui vitae eleifend auctor, erat arcu auctor diam, in malesuada magna ipsum non tortor. Donec a tortor elit. Curabitur ornare luctus varius. Etiam hendrerit est in magna euismod, ut tincidunt lorem facilisis. Proin efficitur efficitur velit vel elementum." />
+<link rel="canonical" href="https://inigo.tech/projects/template/" />
+<meta property="og:url" content="https://inigo.tech/projects/template/" />
 <meta property="og:site_name" content="imartinezl" />
 <meta property="og:type" content="article" />
 <meta property="article:published_time" content="2021-07-01T00:00:00+02:00" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Very very very very very very very very very long Title" />
 <script type="application/ld+json">
-{"@type":"BlogPosting","url":"/projects/template/","dateModified":"2021-07-01T00:00:00+02:00","datePublished":"2021-07-01T00:00:00+02:00","headline":"Very very very very very very very very very long Title","mainEntityOfPage":{"@type":"WebPage","@id":"/projects/template/"},"description":"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque consequat, lectus luctus suscipit sagittis, lacus risus egestas massa, quis facilisis orci nisl non enim. Pellentesque in enim nisi. Cras suscipit nulla at accumsan sollicitudin. Morbi blandit ex at tincidunt tincidunt. Duis in condimentum massa, et commodo enim. Etiam eget maximus nisl, ac sollicitudin purus. Aenean tristique ornare dui, ut lobortis eros ullamcorper ut. Aliquam vitae sagittis sem. Ut elementum aliquet nulla et elementum. Curabitur mattis, dui vitae eleifend auctor, erat arcu auctor diam, in malesuada magna ipsum non tortor. Donec a tortor elit. Curabitur ornare luctus varius. Etiam hendrerit est in magna euismod, ut tincidunt lorem facilisis. Proin efficitur efficitur velit vel elementum.","@context":"https://schema.org"}</script>
+{"@type":"BlogPosting","url":"https://inigo.tech/projects/template/","dateModified":"2021-07-01T00:00:00+02:00","datePublished":"2021-07-01T00:00:00+02:00","headline":"Very very very very very very very very very long Title","mainEntityOfPage":{"@type":"WebPage","@id":"https://inigo.tech/projects/template/"},"description":"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque consequat, lectus luctus suscipit sagittis, lacus risus egestas massa, quis facilisis orci nisl non enim. Pellentesque in enim nisi. Cras suscipit nulla at accumsan sollicitudin. Morbi blandit ex at tincidunt tincidunt. Duis in condimentum massa, et commodo enim. Etiam eget maximus nisl, ac sollicitudin purus. Aenean tristique ornare dui, ut lobortis eros ullamcorper ut. Aliquam vitae sagittis sem. Ut elementum aliquet nulla et elementum. Curabitur mattis, dui vitae eleifend auctor, erat arcu auctor diam, in malesuada magna ipsum non tortor. Donec a tortor elit. Curabitur ornare luctus varius. Etiam hendrerit est in magna euismod, ut tincidunt lorem facilisis. Proin efficitur efficitur velit vel elementum.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 </head>
 
 <body>
     <script>0</script>
+    <a class="skip-link" href="#main">Skip to main</a>
     <div class="antialiased flex flex-col overflow-hidden overscroll-auto w-screen h-screen sm:flex-row">
         <div @click.away="open = false" x-data="{ open: false }">
-    <div class="flex flex-col max-h-screen sm:w-64">
-        <div class="flex flex-row items-center justify-between p-7">
+    <div class="flex flex-col max-h-screen sm:w-64 overflow-auto">
+        <div class="sticky top-0 flex flex-row items-center justify-between p-7 bg-white">
             <a class="" href="/">
                 <div class="lowercase text-2xl font-bold sm:text-xl">
                     Iñigo Martínez
@@ -70,126 +74,111 @@
                 <span></span>
             </div>
         </div>
-        <div x-show="open" x-transition class="flex-important h-screen flex flex-col justify-between p-7">
+        <div x-show="open" x-transition class="flex-important flex flex-col h-screen justify-between p-7">
             <nav class="flex flex-col items-start">
                 
-                <div class="group text-2xl sm:text-lg">
-                    <a href="/about.html" 
-                        class="flex items-start pr-3 py-2 sm:py-0">
-                        &#xe04b;
-                        <div 
-                            class="transition duration-75 ease-in-out border-b-2 border-white group-hover:border-blue-700 group-hover:font-medium">
-                            About
-                        </div>
-                    </a>
-                </div>
+                <a href="/about.html" 
+                    class="flex items-start py-2 sm:py-0 group text-2xl sm:text-lg">
+                    <span>&#xe04b;</span>
+                    <div 
+                        class="transition duration-75 ease-in-out border-b-2 border-white group-hover:border-blue-700 group-hover:font-medium">
+                        About
+                    </div>
+                </a>
                 
-                <div class="group text-2xl sm:text-lg">
-                    <a href="/work.html" 
-                        class="flex items-start pr-3 py-2 sm:py-0">
-                        &#xe04b;
-                        <div 
-                            class="transition duration-75 ease-in-out border-b-2 border-white group-hover:border-blue-700 group-hover:font-medium">
-                            Work
-                        </div>
-                    </a>
-                </div>
+                <a href="/work.html" 
+                    class="flex items-start py-2 sm:py-0 group text-2xl sm:text-lg">
+                    <span>&#xe04b;</span>
+                    <div 
+                        class="transition duration-75 ease-in-out border-b-2 border-white group-hover:border-blue-700 group-hover:font-medium">
+                        Work
+                    </div>
+                </a>
                 
-                <div class="group text-2xl sm:text-lg">
-                    <a href="/research.html" 
-                        class="flex items-start pr-3 py-2 sm:py-0">
-                        &#xe04b;
-                        <div 
-                            class="transition duration-75 ease-in-out border-b-2 border-white group-hover:border-blue-700 group-hover:font-medium">
-                            Research
-                        </div>
-                    </a>
-                </div>
+                <a href="/research.html" 
+                    class="flex items-start py-2 sm:py-0 group text-2xl sm:text-lg">
+                    <span>&#xe04b;</span>
+                    <div 
+                        class="transition duration-75 ease-in-out border-b-2 border-white group-hover:border-blue-700 group-hover:font-medium">
+                        Research
+                    </div>
+                </a>
                 
-                <div class="group text-2xl sm:text-lg">
-                    <a href="assets/docs/resume.pdf"  target="_blank" 
-                        class="flex items-start pr-3 py-2 sm:py-0">
-                        &#xe04b;
-                        <div 
-                            class="transition duration-75 ease-in-out border-b-2 border-white group-hover:border-blue-700 group-hover:font-medium">
-                            Resume
-                        </div>
-                    </a>
-                </div>
+                <a href="assets/docs/resume.pdf"  target="_blank" rel="noopener" 
+                    class="flex items-start py-2 sm:py-0 group text-2xl sm:text-lg">
+                    <span>&#xe04b;</span>
+                    <div 
+                        class="transition duration-75 ease-in-out border-b-2 border-white group-hover:border-blue-700 group-hover:font-medium">
+                        Resume
+                    </div>
+                </a>
                 
             </nav>
 
             <nav class="flex flex-col items-end sm:items-start">
                 
-                <div class="group text-2xl sm:text-lg">
-                    <a href="mailto:inigomlap@gmail.com" target="_blank"
-                        class="flex items-start pr-3 py-2 sm:py-0">
-                        &#xe04e;
-                        <div class="transition duration-75 ease-in-out border-b-2 border-white group-hover:border-blue-700 group-hover:font-medium">
-                            Email
-                        </div>
-                    </a>
-                </div>
+                <a href="mailto:inigomlap@gmail.com" target="_blank" rel="noopener"
+                    class="flex items-start py-2 sm:py-0 group text-2xl sm:text-lg">
+                    <span>&#xe04e;</span>
+                    <div
+                        class="transition duration-75 ease-in-out border-b-2 border-white group-hover:border-blue-700 group-hover:font-medium">
+                        Email
+                    </div>
+                </a>
                 
-                <div class="group text-2xl sm:text-lg">
-                    <a href="https://github.com/imartinezl" target="_blank"
-                        class="flex items-start pr-3 py-2 sm:py-0">
-                        &#xe04e;
-                        <div class="transition duration-75 ease-in-out border-b-2 border-white group-hover:border-blue-700 group-hover:font-medium">
-                            GitHub
-                        </div>
-                    </a>
-                </div>
+                <a href="https://github.com/imartinezl" target="_blank" rel="noopener"
+                    class="flex items-start py-2 sm:py-0 group text-2xl sm:text-lg">
+                    <span>&#xe04e;</span>
+                    <div
+                        class="transition duration-75 ease-in-out border-b-2 border-white group-hover:border-blue-700 group-hover:font-medium">
+                        GitHub
+                    </div>
+                </a>
                 
-                <div class="group text-2xl sm:text-lg">
-                    <a href="https://twitter.com/Inigoml" target="_blank"
-                        class="flex items-start pr-3 py-2 sm:py-0">
-                        &#xe04e;
-                        <div class="transition duration-75 ease-in-out border-b-2 border-white group-hover:border-blue-700 group-hover:font-medium">
-                            Twitter
-                        </div>
-                    </a>
-                </div>
+                <a href="https://twitter.com/Inigoml" target="_blank" rel="noopener"
+                    class="flex items-start py-2 sm:py-0 group text-2xl sm:text-lg">
+                    <span>&#xe04e;</span>
+                    <div
+                        class="transition duration-75 ease-in-out border-b-2 border-white group-hover:border-blue-700 group-hover:font-medium">
+                        Twitter
+                    </div>
+                </a>
                 
-                <div class="group text-2xl sm:text-lg">
-                    <a href="https://www.linkedin.com/in/imartinezl/" target="_blank"
-                        class="flex items-start pr-3 py-2 sm:py-0">
-                        &#xe04e;
-                        <div class="transition duration-75 ease-in-out border-b-2 border-white group-hover:border-blue-700 group-hover:font-medium">
-                            LinkedIn
-                        </div>
-                    </a>
-                </div>
+                <a href="https://www.linkedin.com/in/imartinezl/" target="_blank" rel="noopener"
+                    class="flex items-start py-2 sm:py-0 group text-2xl sm:text-lg">
+                    <span>&#xe04e;</span>
+                    <div
+                        class="transition duration-75 ease-in-out border-b-2 border-white group-hover:border-blue-700 group-hover:font-medium">
+                        LinkedIn
+                    </div>
+                </a>
                 
-                <div class="group text-2xl sm:text-lg">
-                    <a href="https://scholar.google.es/citations?user=_VGGVEgAAAAJ" target="_blank"
-                        class="flex items-start pr-3 py-2 sm:py-0">
-                        &#xe04e;
-                        <div class="transition duration-75 ease-in-out border-b-2 border-white group-hover:border-blue-700 group-hover:font-medium">
-                            Scholar
-                        </div>
-                    </a>
-                </div>
+                <a href="https://scholar.google.es/citations?user=_VGGVEgAAAAJ" target="_blank" rel="noopener"
+                    class="flex items-start py-2 sm:py-0 group text-2xl sm:text-lg">
+                    <span>&#xe04e;</span>
+                    <div
+                        class="transition duration-75 ease-in-out border-b-2 border-white group-hover:border-blue-700 group-hover:font-medium">
+                        Scholar
+                    </div>
+                </a>
                 
-                <div class="group text-2xl sm:text-lg">
-                    <a href="http://arxiv.org/a/martinez_i_3" target="_blank"
-                        class="flex items-start pr-3 py-2 sm:py-0">
-                        &#xe04e;
-                        <div class="transition duration-75 ease-in-out border-b-2 border-white group-hover:border-blue-700 group-hover:font-medium">
-                            arXiv
-                        </div>
-                    </a>
-                </div>
+                <a href="http://arxiv.org/a/martinez_i_3" target="_blank" rel="noopener"
+                    class="flex items-start py-2 sm:py-0 group text-2xl sm:text-lg">
+                    <span>&#xe04e;</span>
+                    <div
+                        class="transition duration-75 ease-in-out border-b-2 border-white group-hover:border-blue-700 group-hover:font-medium">
+                        arXiv
+                    </div>
+                </a>
                 
-                <div class="group text-2xl sm:text-lg">
-                    <a href="https://www.researchgate.net/profile/Inigo-Martinez-2" target="_blank"
-                        class="flex items-start pr-3 py-2 sm:py-0">
-                        &#xe04e;
-                        <div class="transition duration-75 ease-in-out border-b-2 border-white group-hover:border-blue-700 group-hover:font-medium">
-                            ResearchGate
-                        </div>
-                    </a>
-                </div>
+                <a href="https://www.researchgate.net/profile/Inigo-Martinez-2" target="_blank" rel="noopener"
+                    class="flex items-start py-2 sm:py-0 group text-2xl sm:text-lg">
+                    <span>&#xe04e;</span>
+                    <div
+                        class="transition duration-75 ease-in-out border-b-2 border-white group-hover:border-blue-700 group-hover:font-medium">
+                        ResearchGate
+                    </div>
+                </a>
                 
             </nav>
         </div>
@@ -210,13 +199,13 @@
 
         <div class="text-xl flex pl-4 gap-x-2">
           
-          <a href=https://inigo.tech target="_blank" class="hover:text-blue-700">
+          <a href=https://inigo.tech target="_blank" rel="noopener" class="hover:text-blue-700">
             &#xe120;
           </a>
           
 
           
-          <a href=https://github.com/imartinezl target="_blank" class="hover:text-blue-700">
+          <a href=https://github.com/imartinezl target="_blank" rel="noopener" class="hover:text-blue-700">
             &#xe035;
           </a>
           
@@ -501,7 +490,7 @@ Aenean tristique ornare dui, ut lobortis eros ullamcorper ut. Aliquam vitae sagi
     
     <div class="flex justify-between gap-x-4 py-3">
       
-      <a href="/projects/project_0/index.html" class="flex min-w-0 gap-x-1 hover:text-gray-600">
+      <a href="https://inigo.tech/projects/project_0/index.html" class="flex min-w-0 gap-x-1 hover:text-gray-600">
         <p>&#xe04a;</p>
         <p class="">Prev</p>
         
